tests/models/struct/unnamed/i32/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    i32
);
fn main() {}
